--- a/src/app/pages/resquests/resquests.page.html
+++ b/src/app/pages/resquests/resquests.page.html
@@ -35,7 +35,7 @@
           <div class="icons call" (click)="callDriver(request)">
             <ion-icon color="light" name="call-outline"></ion-icon>
           </div>
-          <div class="icons track">
+          <div class="icons track" (click)="track(request)">
             <ion-icon color="light" name="locate-outline"></ion-icon>
           </div>
         </ion-col>
