--- a/src/app/pages/signin/signin.page.html
+++ b/src/app/pages/signin/signin.page.html
@@ -3,7 +3,7 @@
   <div style="background-color: white; border-top-left-radius: 10px; border-top-right-radius: 10px;">
     <ion-grid>
       <ion-row>
-        <ion-col size="12" style="text-align: center;">
+        <ion-col hidden size="12" style="text-align: center;">
           <ion-label>Haven't created an account? </ion-label>
           <ion-label color="ourtheme" (click)="navigate()">Sign up here</ion-label>
         </ion-col>
