--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -3,66 +3,29 @@
     <ion-label slot="start"> Latest request </ion-label>
   </ion-item-divider>
 
-  <ion-item-sliding>
+  <ion-item-sliding *ngFor="let request of requests">
     <ion-item>
-      <ion-label slot="start"> {{ date | date: 'MM/dd/yyyy'}} </ion-label>
-      <ion-label slot="end"> {{ date | date: 'hh:mm'}} </ion-label>
+      <ion-label
+        style="background-color: #f5757931; color: #f5757a; border-radius: 15px; font-weight: 700; padding-left: 15px; padding-top: 3px; padding-bottom: 3px;"
+        slot="start"> {{ request.data.createdAt | date:
+        'MM/dd/yyyy'}} </ion-label>
+      <ion-label
+        style="background-color: #04081f34; color: #04081f; border-radius: 15px; font-weight: 700; padding-left: 6px; padding-top: 3px; padding-bottom: 3px;"
+        slot="end"> {{ request.data.createdAt | date: 'hh:mm'}} </ion-label>
     </ion-item>
     <ion-item-options>
-      <ion-item-option color="sec">
+      <ion-item-option [matMenuTriggerFor]="menu" color="sec">
         <ion-icon slot="start" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
         More
       </ion-item-option>
-      <ion-item-option (click)="navigateToMap()" color="ourtheme">
+      <mat-menu #menu="matMenu">
+        <ion-button (click)="changeStatus('accepted', request.id)" expand="full" color="success">Accept</ion-button>
+        <ion-button (click)="changeStatus('onway', request.id)" expand="full" color="primary">Onway</ion-button>
+        <ion-button (click)="changeStatus('declined', request.id)" expand="full" color="danger">Decline</ion-button>
+        <ion-button (click)="changeStatus('attended', request.id)" expand="full" color="warning">Attended</ion-button>
+      </mat-menu>
+      <ion-item-option (click)="navigateToMap(request.id)" color="ourtheme">
         <ion-icon color="light" slot="start" name="location"></ion-icon>
-      </ion-item-option>
-    </ion-item-options>
-  </ion-item-sliding>
-  <ion-item-sliding>
-    <ion-item>
-      <ion-label slot="start"> {{ date | date: 'MM/dd/yyyy'}} </ion-label>
-      <ion-label slot="end"> {{ date | date: 'hh:mm'}} </ion-label>
-    </ion-item>
-    <ion-item-options>
-      <ion-item-option color="sec">
-        <ion-icon slot="start" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
-        More
-      </ion-item-option>
-      <ion-item-option color="ourtheme">
-        <ion-icon slot="start" name="archive"></ion-icon>
-        Archive
-      </ion-item-option>
-    </ion-item-options>
-  </ion-item-sliding>
-  <ion-item-sliding>
-    <ion-item>
-      <ion-label slot="start"> {{ date | date: 'MM/dd/yyyy'}} </ion-label>
-      <ion-label slot="end"> {{ date | date: 'hh:mm'}} </ion-label>
-    </ion-item>
-    <ion-item-options>
-      <ion-item-option color="primary">
-        <ion-icon slot="start" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
-        More
-      </ion-item-option>
-      <ion-item-option color="secondary">
-        <ion-icon slot="start" name="archive"></ion-icon>
-        Archive
-      </ion-item-option>
-    </ion-item-options>
-  </ion-item-sliding>
-  <ion-item-sliding>
-    <ion-item>
-      <ion-label slot="start"> {{ date | date: 'MM/dd/yyyy'}} </ion-label>
-      <ion-label slot="end"> {{ date | date: 'hh:mm'}} </ion-label>
-    </ion-item>
-    <ion-item-options>
-      <ion-item-option color="primary">
-        <ion-icon slot="start" ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
-        More
-      </ion-item-option>
-      <ion-item-option color="secondary">
-        <ion-icon slot="start" name="archive"></ion-icon>
-        Archive
       </ion-item-option>
     </ion-item-options>
   </ion-item-sliding>
