--- a/src/app/pages/account/account.page.html
+++ b/src/app/pages/account/account.page.html
@@ -76,12 +76,26 @@
       Ambulance information
     </ion-label>
   </ion-item-divider>
-  <ion-label class="ion-margin">Registration No 45454</ion-label>
+  <div style="margin-top: 10px;">
+    <ion-label class="ion-margin">Registration No <span
+        style="background-color: #04081f28; color: #04081f; border-radius: 20px; padding: 3px 6px">{{acs.user.ambulance.regno}}</span>
+    </ion-label>
+  </div>
 
-  <ion-label>Status</ion-label>
-  <mat-button-toggle-group name="favoriteColor" value="blue" aria-label="Favorite Color">
-    <mat-button-toggle value="available">Available</mat-button-toggle>
-    <mat-button-toggle value="green">Green</mat-button-toggle>
-    <mat-button-toggle value="blue">Blue</mat-button-toggle>
-  </mat-button-toggle-group>
+  <div style="margin-top: 5px;">
+    <ion-label class="ion-margin">Status</ion-label> <br>
+    <mat-button-toggle-group (change)="changeStatus($event)" style="margin-left: 15px;" name="favoriteColor"
+      [value]="acs.user.ambulance.status" aria-label="Favorite Color">
+      <mat-button-toggle value="available">
+        <spap style="background-color: rgba(0, 128, 0, 0.397); color: green; border-radius: 20px; padding: 3px 6px">
+          Available</spap>
+      </mat-button-toggle>
+      <mat-button-toggle value="busy"><span
+          style="background-color: rgba(255, 255, 0, 0.26); color: rgb(102, 102, 15); border-radius: 20px; padding: 3px 6px">Busy</span>
+      </mat-button-toggle>
+      <mat-button-toggle value="unavailable"><span
+          style="background-color: rgba(255, 0, 0, 0.233); color: red; border-radius: 20px; padding: 3px 6px">Unavailable</span>
+      </mat-button-toggle>
+    </mat-button-toggle-group>
+  </div>
 </ion-content>
