--- a/src/app/pages/menu/menu.page.html
+++ b/src/app/pages/menu/menu.page.html
@@ -36,9 +36,9 @@
         <ion-icon size="small" name="person-add-outline"></ion-icon>
       </ion-tab-button>
 
-      <ion-tab-button *ngIf="acs.loginStatus" tab="requests">
+      <!-- <ion-tab-button *ngIf="acs.loginStatus" tab="requests">
         <ion-icon size="small" name="time-outline"></ion-icon>
-      </ion-tab-button>
+      </ion-tab-button> -->
 
       <ion-tab-button tab="map">
         <ion-icon size="small" name="map-outline"></ion-icon>
