--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,8 +1,10 @@
 <ion-content [fullscreen]="true">
   <div class="container">
     <div class="contents">
-      <h3 class="welcome">Hi, welcome to back to Ambi
-        paml service</h3>
+      <h3 class="welcome">
+        <span>Hi</span>, welcome to back to Ambi
+        paml service
+      </h3>
       <div style="text-align: center;">
         <img src="assets/amb.png">
       </div>
