--- a/src/app/pages/menu/menu.page.html
+++ b/src/app/pages/menu/menu.page.html
@@ -32,9 +32,9 @@
         <ion-icon size="small" name="log-in-outline"></ion-icon>
       </ion-tab-button>
 
-      <ion-tab-button *ngIf="!acs.loginStatus" tab="signup">
+      <!-- <ion-tab-button *ngIf="!acs.loginStatus" tab="signup">
         <ion-icon size="small" name="person-add-outline"></ion-icon>
-      </ion-tab-button>
+      </ion-tab-button> -->
 
       <!-- <ion-tab-button *ngIf="acs.loginStatus" tab="requests">
         <ion-icon size="small" name="time-outline"></ion-icon>
