--- a/src/app/pages/account/account.page.html
+++ b/src/app/pages/account/account.page.html
@@ -84,7 +84,7 @@
 
   <div style="margin-top: 5px;">
     <ion-label class="ion-margin">Status</ion-label> <br>
-    <mat-button-toggle-group (change)="changeStatus($event)" style="margin-left: 15px;" name="favoriteColor"
+    <mat-button-toggle-group (change)="changeStatus($event)" style="margin-left: 15px;"
       [value]="acs.user.ambulance.status" aria-label="Favorite Color">
       <mat-button-toggle value="available">
         <spap style="background-color: rgba(0, 128, 0, 0.397); color: green; border-radius: 20px; padding: 3px 6px">
